@@ -1,27 +1,49 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 da072e2d4fe34ff86b320fa6548babec ChangeLog 1700
-RMD160 1bac9fd95c1a32b91760598a2e4f993a65cf2894 ChangeLog 1700
-SHA256 cedab6d107bbd27f3b16aae626c6eb3d4494fb8d7a5c3fbcba6efe6416914811 ChangeLog 1700
+DIST ClientCookie-0.4.18.tar.gz 106005 size 106005
+DIST ClientCookie-0.4.19.tar.gz 106215 size 106215
+DIST ClientCookie-0.4.4a.tar.gz 79853 size 79853
+DIST ClientCookie-1.0.2.tar.gz 116785 size 116785
+DIST ClientCookie-1.0.3.tar.gz 118631 RMD160 96042db57fd266f686aa8502c52aff4f8bd6b98e SHA256 104e905abb450dcdc3ffe454192ca630c217748ca99f81221d8a41634d05a1df size 118631
+DIST ClientCookie-1.2.0.tar.gz 130428 RMD160 8d9ee0b9bcc6d1cab155cef5380b2c11272b05df SHA256 78dded137e2ac9d42ed3d4fca6bcb11c016191c7e16f442d57f30be65c07e827 size 130428
+DIST ClientCookie-1.3.0.tar.gz 130974 RMD160 0c557c11efee3ada975235ed72252176c059e5d2 SHA256 cd51a411ffbbce76a4046a42f43711fc2674db05201e649c6035aa8178874797 size 130974
+EBUILD clientcookie-0.4.18.ebuild 675 RMD160 9ff8afc2cc7a1780361460bfd92197d02ac73946 SHA1 0f1b5ed0ab3dd9321fec46d8df4a7bb7d5ad21e1 SHA256 ae04d50cf04bef40f5685751c259df13e4d933925fdd97514bbc15407505a546 size 675
 MD5 73a30d6641f650dbf87c43bbe832b22d clientcookie-0.4.18.ebuild 675
 RMD160 9ff8afc2cc7a1780361460bfd92197d02ac73946 clientcookie-0.4.18.ebuild 675
 SHA256 ae04d50cf04bef40f5685751c259df13e4d933925fdd97514bbc15407505a546 clientcookie-0.4.18.ebuild 675
+EBUILD clientcookie-0.4.19.ebuild 670 RMD160 250cb667234a115465b827ef45a68652dfd46a31 SHA1 34b9cf5120147927b6d76ed1e665cebec63158d7 SHA256 1a863d11469a688836aa207afba0d0d9496574219a2329e0bd84e73799fcbf26 size 670
 MD5 15436ccada1efcb497ac1c69287789d5 clientcookie-0.4.19.ebuild 670
 RMD160 250cb667234a115465b827ef45a68652dfd46a31 clientcookie-0.4.19.ebuild 670
 SHA256 1a863d11469a688836aa207afba0d0d9496574219a2329e0bd84e73799fcbf26 clientcookie-0.4.19.ebuild 670
+EBUILD clientcookie-0.4.4a.ebuild 675 RMD160 a3eca6e0fb842011cde5ae15ef8c607ea9fae681 SHA1 ed141244f29276417d77f9b10ecc66cd132378c7 SHA256 4ec26282e106bd4de22398c8f1306f44d74566fda9ad0a6512db1afeccfb7491 size 675
 MD5 6310e369ed7b13bbb321ea86d55a00b1 clientcookie-0.4.4a.ebuild 675
 RMD160 a3eca6e0fb842011cde5ae15ef8c607ea9fae681 clientcookie-0.4.4a.ebuild 675
 SHA256 4ec26282e106bd4de22398c8f1306f44d74566fda9ad0a6512db1afeccfb7491 clientcookie-0.4.4a.ebuild 675
+EBUILD clientcookie-1.0.2.ebuild 669 RMD160 0df4c79b1b62b12eaf4bdc9f8ad15e9226b4a449 SHA1 662e09043b2ef3362e64dc9b739ed36ffcd1003d SHA256 30a7b1abd84e96a21451ea246dcf29427171e30d396977090def7bfce4716eda size 669
 MD5 b9decc077e66fb593f69dcc2b1149c19 clientcookie-1.0.2.ebuild 669
 RMD160 0df4c79b1b62b12eaf4bdc9f8ad15e9226b4a449 clientcookie-1.0.2.ebuild 669
 SHA256 30a7b1abd84e96a21451ea246dcf29427171e30d396977090def7bfce4716eda clientcookie-1.0.2.ebuild 669
+EBUILD clientcookie-1.0.3.ebuild 673 RMD160 03dd0c7f2c5ba6802c9a664354d13a7d5ff1290c SHA1 594372e68bf32e88fc3e6d9a53625d59d0dddf92 SHA256 c85f674754d2863e4b7c95d6d6532836e54432dcca7b1ac6e4094a4bf6951dc7 size 673
 MD5 3b7eaffd572a3738f4349eaedf026218 clientcookie-1.0.3.ebuild 673
 RMD160 03dd0c7f2c5ba6802c9a664354d13a7d5ff1290c clientcookie-1.0.3.ebuild 673
 SHA256 c85f674754d2863e4b7c95d6d6532836e54432dcca7b1ac6e4094a4bf6951dc7 clientcookie-1.0.3.ebuild 673
+EBUILD clientcookie-1.2.0.ebuild 857 RMD160 dc7476a8efbb4f1003fe1221cf72d1ca35d5e017 SHA1 0c07ad515a9718d0229b5e6a25d34cf2c8a329b4 SHA256 97e9f7ea4b5df44ea9c88e45e4fb484ad63345c03aad5effdb941293115fdc36 size 857
 MD5 2061de2c83203a7f5b90f000b28aa67c clientcookie-1.2.0.ebuild 857
 RMD160 dc7476a8efbb4f1003fe1221cf72d1ca35d5e017 clientcookie-1.2.0.ebuild 857
 SHA256 97e9f7ea4b5df44ea9c88e45e4fb484ad63345c03aad5effdb941293115fdc36 clientcookie-1.2.0.ebuild 857
+EBUILD clientcookie-1.3.0.ebuild 862 RMD160 0202348d37cb144e72ed57636b29181e58d7f0e2 SHA1 ea97d611f5269b548b58a1d08d5196f611e8f4b0 SHA256 4ee65a58ca12e881d8b927af69ce677b90433ef6340147761c3fde67f9a3b026 size 862
+MD5 4dba4b3d9185b41977e538ca29fda391 clientcookie-1.3.0.ebuild 862
+RMD160 0202348d37cb144e72ed57636b29181e58d7f0e2 clientcookie-1.3.0.ebuild 862
+SHA256 4ee65a58ca12e881d8b927af69ce677b90433ef6340147761c3fde67f9a3b026 clientcookie-1.3.0.ebuild 862
+MISC ChangeLog 1849 RMD160 1ffec99b1c9d0fc28bcfda390823d8d0a0774314 SHA1 7f87ffac2d28e9bc544b63521512d33c7f15ffbe SHA256 ba207f3c5590ccb6a78991690dea866d80a4f5775c38fb41302013c4ec2f3f0e size 1849
+MD5 bb82c956989f41219145dc257248b4c4 ChangeLog 1849
+RMD160 1ffec99b1c9d0fc28bcfda390823d8d0a0774314 ChangeLog 1849
+SHA256 ba207f3c5590ccb6a78991690dea866d80a4f5775c38fb41302013c4ec2f3f0e ChangeLog 1849
+MISC metadata.xml 767 RMD160 8d303b82cc3c72e5c7d85c0caf4b68a57beed9d5 SHA1 163dd4cde9532d6e97cf9bd575c7166530cc3ff3 SHA256 9611a2dfb8bfd60312b76bd8bcebdf0cce50192b4829d2c7010bd184eb6ffa3c size 767
+MD5 7baaa08b0c1323007b7046c9d1b6d106 metadata.xml 767
+RMD160 8d303b82cc3c72e5c7d85c0caf4b68a57beed9d5 metadata.xml 767
+SHA256 9611a2dfb8bfd60312b76bd8bcebdf0cce50192b4829d2c7010bd184eb6ffa3c metadata.xml 767
 MD5 b6e7f493690e1fa8df7a8126312da11f files/digest-clientcookie-0.4.18 71
 RMD160 40ce1e5baa5c7f1cd128716c9d989635a2a638e7 files/digest-clientcookie-0.4.18 71
 SHA256 38f567b1898b9f1cef0385aa2d5886540c350d74e4d8ef45056be0e585b98f0c files/digest-clientcookie-0.4.18 71
@@ -34,19 +56,19 @@ SHA256 d9cce400f24f5ed8b088836736fb5a17e23d396e4a31c660ec6c736c70443006 files/di
 MD5 c39901948959299ce686212166b5d4be files/digest-clientcookie-1.0.2 70
 RMD160 92a5945794c131cf05b8e7175992767627d49267 files/digest-clientcookie-1.0.2 70
 SHA256 a03cd880d2779e4926f190d139363d67856d2cd349ad479ac4a287401fbcb52d files/digest-clientcookie-1.0.2 70
-MD5 a9f132bcbdbf1ea5b99060373d37b3bb files/digest-clientcookie-1.0.3 70
-RMD160 4ebda51f34f580a14c3a660b00e45e40b8166536 files/digest-clientcookie-1.0.3 70
-SHA256 84daecba2c02af42cf1a9798897ed38572cc1a41dbe0f555eaee4778c7e85152 files/digest-clientcookie-1.0.3 70
+MD5 ebd1c48191ca105fbb1f7f40346b4200 files/digest-clientcookie-1.0.3 256
+RMD160 26aa48c14db186d5c5986b0e1c0c84f8d6e3e96c files/digest-clientcookie-1.0.3 256
+SHA256 f24a85f763f670b297ad8a100ea39f5d220e5aba0dafd794d06d1b7a770ac36e files/digest-clientcookie-1.0.3 256
 MD5 23affa5e87a872867756b576f36ec87f files/digest-clientcookie-1.2.0 256
 RMD160 ec1fd8be7e330230f2d71c38ac9147fb1c1150d6 files/digest-clientcookie-1.2.0 256
 SHA256 52aca8d81aa5fef5074ad7e7dff8adda6eff883f8d54dda0b5154cedb83bbe26 files/digest-clientcookie-1.2.0 256
-MD5 7baaa08b0c1323007b7046c9d1b6d106 metadata.xml 767
-RMD160 8d303b82cc3c72e5c7d85c0caf4b68a57beed9d5 metadata.xml 767
-SHA256 9611a2dfb8bfd60312b76bd8bcebdf0cce50192b4829d2c7010bd184eb6ffa3c metadata.xml 767
+MD5 b0fdd1d36a98025137cd44a251fb9608 files/digest-clientcookie-1.3.0 256
+RMD160 1275d2d91dafa82eb8ebe402158c77bd42c476ef files/digest-clientcookie-1.3.0 256
+SHA256 7969309ef156ffba7543665878710130f0daecc0482fdf5fdcab718cef92a95d files/digest-clientcookie-1.3.0 256
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2.1 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFELpLFJrHF4yAQTrARAnXZAJ4iNmwQ1hTpq8rk2IsV72GMYf3eDgCggJe5
-G1AB9pHcflINcVFfjQ2A3Ck=
-=SQnU
+iD8DBQFEbXG42jLqHNfbg2URAp2aAJwKM+DoS1vBdbTScimNfUu1D6jEDgCgzy0f
+piFBJT3lgkB7aPXN0h1O2pk=
+=9yz2
 -----END PGP SIGNATURE-----
