@@ -1,1 +1,3 @@
 MD5 b0c9c02e298bdcc8cb7f4ae00a6e5701 ClientCookie-1.0.3.tar.gz 118631
+RMD160 96042db57fd266f686aa8502c52aff4f8bd6b98e ClientCookie-1.0.3.tar.gz 118631
+SHA256 104e905abb450dcdc3ffe454192ca630c217748ca99f81221d8a41634d05a1df ClientCookie-1.0.3.tar.gz 118631
