@@ -1,0 +1,3 @@
+MD5 7a43e4624299b3951ae1a442194d2185 ClientCookie-1.3.0.tar.gz 130974
+RMD160 0c557c11efee3ada975235ed72252176c059e5d2 ClientCookie-1.3.0.tar.gz 130974
+SHA256 cd51a411ffbbce76a4046a42f43711fc2674db05201e649c6035aa8178874797 ClientCookie-1.3.0.tar.gz 130974
