@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/clientcookie
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/clientcookie/ChangeLog,v 1.13 2006/04/01 14:48:27 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/clientcookie/ChangeLog,v 1.14 2006/05/19 07:20:13 lucass Exp $
+
+*clientcookie-1.3.0 (19 May 2006)
+
+  19 May 2006; Lukasz Strzygowski <lucass@gentoo.org>
+  +clientcookie-1.3.0.ebuild:
+  Version bump. Marked ~amd64.
 
   01 Apr 2006; Aron Griffis <agriffis@gentoo.org> clientcookie-1.2.0.ebuild:
   Mark 1.2.0 ~ia64
